--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="generator" content="Jekyll v3.8.6">
-<title>Navbar Template · Bootstrap</title>
+<title>My Kitchen!</title>
 
 <!-- Bootstrap core CSS -->
 <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -53,6 +53,54 @@
 	<div class="container">
 		<main role="main">
 			<div class="jumbotron">
+				<div id="carouselExampleIndicators" class="col-sm-9 mx-auto carousel slide"
+					data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0"
+							class="active"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+						<div class="carousel-item active">
+							<img class="d-block w-100" height="500"
+								src="https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg"
+								alt="First slide">
+							<div class="carousel-caption d-none d-md-block">
+								<h5>First Picture</h5>
+								<p>first picture</p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" height="500"
+								src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg"
+								alt="Second slide">
+							<div class="carousel-caption d-none d-md-block">
+								<h5>Second Picture</h5>
+								<p>second picture</p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" height="500"
+								src="https://images.pexels.com/photos/3184195/pexels-photo-3184195.jpeg"
+								alt="Third slide">
+							<div class="carousel-caption d-none d-md-block">
+								<h5>Third Picture</h5>
+								<p>third picture</p>
+							</div>
+						</div>
+
+						<a class="carousel-control-prev" href="#carouselExampleIndicators"
+							role="button" data-slide="prev"> <span
+							class="carousel-control-prev-icon" aria-hidden="true"></span> <span
+							class="sr-only">Previous</span>
+						</a> <a class="carousel-control-next"
+							href="#carouselExampleIndicators" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+				</div>
 				<div class="col-sm-8 mx-auto">
 					<h1>Hello World!</h1>
 					<p>
@@ -75,13 +123,18 @@
 			</div>
 		</main>
 	</div>
-	
-	
-	<!-- Boostrap core JavaScript -->>
+
+
+	<!-- Boostrap core JavaScript -->
+	>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 		crossorigin="anonymous"></script>
-	<script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
+	<script>
+		window.jQuery
+				|| document
+						.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')
+	</script>
 	<script src="/js/bootstrap.bundle.min.js"
 		integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
 		crossorigin="anonymous"></script>
