Extract common fragments to avoid redundant code

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -6,6 +6,10 @@ body {
   margin-bottom: 20px;
 }
 
+.container {
+	width: 90%
+}
+
 .bd-placeholder-img {
 	font-size: 1.125rem;
 	text-anchor: middle;
