--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarsExample07XL">
                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active"><a class="nav-link" href="#">Home
+                  <li class="nav-item active"><a class="nav-link" href="">Home
                      <span class="sr-only">(current)</span>
                      </a>
                   </li>
@@ -49,7 +49,7 @@
                   <li class="nav-item"><a class="nav-link" href="#">Shopping
                      Cart</a>
                   </li>
-                  <li class="nav-item"><a class="nav-link" href="#">My
+                  <li class="nav-item"><a class="nav-link" href="myAccount">My
                      Account</a>
                   </li>
                   <li class="nav-item"><a class="nav-link" href="#">Log out</a></li>
