--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en-US" xmlns:th="http://www.w3.org/1999/xhtml">
    <head th:fragment="common-header">
       <meta charset="utf-8">
       <meta name="viewport"
