--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,56 +6,61 @@
 
 	<div class="container">
 		<main role="main">
-		    <div class="jumbotron">
-				<div id="carouselExampleIndicators"
-					class="col-sm-9 mx-auto carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#carouselExampleIndicators" data-slide-to="0"
-							class="active"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-					</ol>
-					<div class="carousel-inner" role="listbox">
-						<div class="carousel-item active">
-							<img class="img-responsive d-block w-100" height="500"
-								src="https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg"
-								alt="First slide">
-							<div class="carousel-caption d-none d-md-block">
-								<h3>Thousands of Healthy Options!</h3>
+			<div class="jumbotron">
+				<div class="row">
+					<div id="carouselExampleIndicators"
+						class="col-xs-8 mx-auto carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#carouselExampleIndicators" data-slide-to="0"
+								class="active"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						</ol>
+						<div class="carousel-inner" role="listbox">
+							<div class="carousel-item active">
+								<img class="img-responsive d-block" height="500"
+									src="https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg"
+									alt="First slide">
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Thousands of Healthy Options!</h3>
+								</div>
 							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100" height="500"
-								src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg"
-								alt="Second slide">
-							<div class="carousel-caption d-none d-md-block">
-								<h3>License to grill!</h3>
+							<div class="carousel-item">
+								<img class="d-block" height="500"
+									src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg"
+									alt="Second slide">
+								<div class="carousel-caption d-none d-md-block">
+									<h3>License to grill!</h3>
+								</div>
 							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100" height="500"
-								src="https://images.pexels.com/photos/3184195/pexels-photo-3184195.jpeg"
-								alt="Third slide">
-							<div class="carousel-caption d-none d-md-block">
-								<h3>Pefect for any occasion!</h3>
+							<div class="carousel-item">
+								<img class="d-block" height="500"
+									src="https://images.pexels.com/photos/3184195/pexels-photo-3184195.jpeg"
+									alt="Third slide">
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Perfect for any occasion!</h3>
+								</div>
 							</div>
-						</div>
 
-						<a class="carousel-control-prev" href="#carouselExampleIndicators"
-							role="button" data-slide="prev"> <span
-							class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-							class="sr-only">Previous</span>
-						</a> <a class="carousel-control-next"
-							href="#carouselExampleIndicators" role="button" data-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">Next</span>
-						</a>
+							<a class="carousel-control-prev"
+								href="#carouselExampleIndicators" role="button"
+								data-slide="prev"> <span class="carousel-control-prev-icon"
+								aria-hidden="true"></span> <span class="sr-only">Previous</span>
+							</a> <a class="carousel-control-next"
+								href="#carouselExampleIndicators" role="button"
+								data-slide="next"> <span class="carousel-control-next-icon"
+								aria-hidden="true"></span> <span class="sr-only">Next</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-xs-4">
+						<img alt="logo" class="img-responsive" th:src="@{/img/logo.png}">
 					</div>
 				</div>
 			</div>
 		</main>
-		
-	    <hr>
+
+		<hr>
 	</div>
 
 	<div th:replace="common/header :: body-scripts"></div>
