Add common footer

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,6 +61,8 @@
 		</main>
 
 		<hr>
+		
+	  <div th:replace="common/header :: footer"></div>
 	</div>
 
 	<div th:replace="common/header :: body-scripts"></div>
