--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,76 +1,83 @@
 <!DOCTYPE html>
 <html lang="en-US" xmlns:th="http://www.w3.org/1999/xhtml">
-   <head th:fragment="common-header">
-      <meta charset="utf-8">
-      <meta name="viewport"
-         content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="generator" content="Jekyll v3.8.6">
-      <title>My Kitchen!</title>
-      <!-- Bootstrap core CSS -->
-      <link href="/css/bootstrap.min.css" rel="stylesheet">
-      <link href="/css/styles.css" rel="stylesheet">
-      <link rel="icon" href="/img/restaurant.png">
-   </head>
-   
-   <body>
-      <div th:fragment="navbar">
-         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Container XL</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-               data-target="#navbarsExample07XL" aria-controls="navbarsExample07XL"
-               aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarsExample07XL">
-               <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active"><a class="nav-link" href="">Home
-                     <span class="sr-only">(current)</span>
-                     </a>
-                  </li>
-                  <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-                  <li class="nav-item"><a class="nav-link disabled" href="#"
-                     tabindex="-1" aria-disabled="true">Disabled</a></li>
-                  <li class="nav-item dropdown">
-                     <a
-                        class="nav-link dropdown-toggle" href="#" id="dropdown07XL"
-                        data-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                     <div class="dropdown-menu" aria-labelledby="dropdown07XL">
-                        <a class="dropdown-item" href="#">Action</a> <a
-                           class="dropdown-item" href="#">Another action</a> <a
-                           class="dropdown-item" href="#">Something else here</a>
-                     </div>
-                  </li>
-               </ul>
-               <form class="form-inline my-2 my-md-0">
-                  <input class="form-control" type="text" placeholder="Search"
-                     aria-label="Search">
-               </form>
-               <ul class="nav navbar-nav navbar-right">
-                  <li class="nav-item"><a class="nav-link" href="#">Shopping
-                     Cart</a>
-                  </li>
-                  <li class="nav-item"><a class="nav-link" href="myAccount">My
-                     Account</a>
-                  </li>
-                  <li class="nav-item"><a class="nav-link" href="#">Log out</a></li>
-               </ul>
-            </div>
-         </nav>
-      </div>
-   </body>
-   
-   <div th:fragment="body-scripts">
-      <!-- Boostrap core JavaScript -->
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-         crossorigin="anonymous"></script>
-      <script>
-         window.jQuery
-         		|| document
-         				.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')
-      </script>
-      <script src="/js/bootstrap.bundle.min.js"
-         integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
-         crossorigin="anonymous"></script>
-   </div>
+<head th:fragment="common-header">
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="generator" content="Jekyll v3.8.6">
+<title>My Kitchen!</title>
+<!-- Bootstrap core CSS -->
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/styles.css" rel="stylesheet">
+<link rel="icon" href="/img/restaurant.png">
+</head>
+
+<body>
+	<div th:fragment="navbar">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="#">Container XL</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarsExample07XL" aria-controls="navbarsExample07XL"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarsExample07XL">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active"><a class="nav-link" href="">Home
+							<span class="sr-only">(current)</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+					<li class="nav-item"><a class="nav-link disabled" href="#"
+						tabindex="-1" aria-disabled="true">Disabled</a></li>
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="#" id="dropdown07XL"
+						data-toggle="dropdown" aria-expanded="false">Dropdown</a>
+						<div class="dropdown-menu" aria-labelledby="dropdown07XL">
+							<a class="dropdown-item" href="#">Action</a> <a
+								class="dropdown-item" href="#">Another action</a> <a
+								class="dropdown-item" href="#">Something else here</a>
+						</div></li>
+				</ul>
+				<form class="form-inline my-2 my-md-0">
+					<input class="form-control" type="text" placeholder="Search"
+						aria-label="Search">
+				</form>
+				<ul class="nav navbar-nav navbar-right">
+					<li class="nav-item"><a class="nav-link" href="#">Shopping
+							Cart</a></li>
+					<li class="nav-item"><a class="nav-link" href="myAccount">My
+							Account</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Log out</a></li>
+				</ul>
+			</div>
+		</nav>
+	</div>
+
+	<div th:fragment="footer">
+		<footer class="container">
+			<p class="float-right">
+				<a href="#">Back to top</a>
+			</p>
+			<p>
+				&copy; 2017-2020 Company, Inc. &middot; <a href="#">Privacy</a>
+				&middot; <a href="#">Terms</a>
+			</p>
+		</footer>
+	</div>
+</body>
+
+<div th:fragment="body-scripts">
+	<!-- Boostrap core JavaScript -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+		crossorigin="anonymous"></script>
+	<script>
+		window.jQuery
+				|| document
+						.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')
+	</script>
+	<script src="/js/bootstrap.bundle.min.js"
+		integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
+		crossorigin="anonymous"></script>
+</div>
 </html>
