--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -36,3 +36,17 @@ hr {
 	height: 500px;
 	width: 1200px;
 }
+
+.second-headline {
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 24px;
+	color: #fff;
+	margin: auto;
+	text-align: center;
+	margin-top: 170px;
+}
+
+.second-headline span {
+	background-color: #231F20;
+	padding: 5px 22px;
+}
