--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,21 +20,21 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img class="d-block carousel-image" src="img/healthy-lunch.png"
-							alt="First slide">
+							alt="healthy lunch">
 						<div class="carousel-caption d-none d-md-block">
 							<h3>Great options of healthy lunch</h3>
 						</div>
 					</div>
 					<div class="carousel-item">
 						<img class="d-block carousel-image" src="img/grill.png"
-							alt="Second slide">
+							alt="grill">
 						<div class="carousel-caption d-none d-md-block">
 							<h3>We are grill experts!</h3>
 						</div>
 					</div>
 					<div class="carousel-item">
 						<img class="d-block carousel-image" src="img/feast.png"
-							alt="Third slide">
+							alt="feast">
 						<div class="container">
 							<div class="carousel-caption">
 								<h3>Are you going to host your friends?</h3>
