--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -6,37 +6,42 @@
 
 	<div class="container">
 		<div class="row" style="margin-bottom: -100px;">
-			<div class="col-xs-8">
-				<h2 class="section-headline">
+			<div class="col-lg-9">
+				<h2 class="second-headline">
 					<span>User Account</span>
 				</h2>
 			</div>
-			<div class="col-xs-12">
-				<img src="/image/restaurant.png" class="img-responsive" />
+			<div class="col-lg-3">
+				<img class="img-responsive rounded-circle" width="400px"
+					height="400px" src="img/logo.png" alt="logo image">
 			</div>
 		</div>
-		
+
 		<hr
-			style="position: absolute; width: 100%; height: 6px; background-color: #333; z-index: -1; margin-top: -80px;" />
-		<img class="img-responsive" src="/image/wood.png"
-			style="margin-top: -75px;" />
+			style="position: absolute; width: 1200px; height: 6px; background-color: #333; z-index: -1; margin-top: -120px">
+
+		<img class="img-responsive" src="img/wood.png" alt="wood"
+			style="margin-top: -70px;" height="200px" width="1200px">
 
 		<div class="row" style="margin-top: 120px;">
-			<div class="col-xs-9 col-xs-offset-3">
-
-				<!-- Nav tabs -->
-				<ul class="nav nav-tabs">
-					<li><a href="#tab-1" data-toggle="tab"><span
-							style="color: red;">Create new account</span></a></li>
-					<li><a href="#tab-2" data-toggle="tab"><span
-							style="color: red;">Log in</span></a></li>
-					<li><a href="#tab-3" data-toggle="tab"><span
-							style="color: red;">Forget Password</span></a></li>
+			<div class="col-lg-9 offset-lg-3">
+				<ul class="nav nav-tabs" role="tablist">
+					<li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#nav-home">Create
+							new account</a></li>
+					<li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#nav-home">Log
+							in</a></li>
+					<li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#nav-home">Forget
+							password</a></li>
 				</ul>
-
 			</div>
 		</div>
 	</div>
+
+	<!-- End of the container -->
+
+	<hr class="featurette-divider">
+
+	<div th:replace="common/headerAndFooter :: footer"></div>
 
 	<div th:replace="common/headerAndFooter :: body-scripts"></div>
 </body>
