Add tab content on my account page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
 					friendly and enthusiastic team.</p>
 				<p>You'll love it!</p>
 				<p>
-					<a class="btn btn-secondary" href="#" role="button">Order now
+					<a class="btn btn-primary" href="#" role="button">Order now
 						&raquo;</a>
 				</p>
 			</div>
@@ -86,7 +86,7 @@
 				<h4>Online Account</h4>
 				<p>Sign up today for special offers & amazing delivery service!</p>
 				<p>
-					<a class="btn btn-secondary" href="#" role="button">Sign up
+					<a class="btn btn-primary" href="/myAccount" role="button">Sign up
 						&raquo;</a>
 				</p>
 			</div>
