--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -40,7 +40,7 @@
 
 				<!-- create new user -->
 				<div class="tab-content">
-					<div class="tab-pane fade" id="createUserTab">
+					<div class="tab-pane active" id="createUserTab">
 						<div class="card-group">
 							<div class="card-body"
 								style="background-color: #ededed; margin-top: 20px;">
