Add urls to map the tabs on myAccount page
added /login /signup / forgetpassword urls
rendered correct tab content on myAccount page

--- a/src/main/resources/templates/common/headerAndFooter.html
+++ b/src/main/resources/templates/common/headerAndFooter.html
@@ -42,7 +42,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="nav-item"><a class="nav-link" href="#">Shopping
 							Cart</a></li>
-					<li class="nav-item"><a class="nav-link" href="myAccount">My
+					<li class="nav-item"><a class="nav-link" href="login">My
 							Account</a></li>
 					<li class="nav-item"><a class="nav-link" href="/#">Log out</a></li>
 				</ul>
