--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -86,7 +86,7 @@
 				<h4>Online Account</h4>
 				<p>Sign up today for special offers & amazing delivery service!</p>
 				<p>
-					<a class="btn btn-primary" href="/myAccount" role="button">Sign up
+					<a class="btn btn-primary" href="/signup" role="button">Sign up
 						&raquo;</a>
 				</p>
 			</div>
