--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -28,19 +28,19 @@
 			<!-- Tabs -->
 			<div class="col-lg-9 offset-lg-3">
 				<ul class="nav nav-tabs" role="tablist">
-					<li class="nav-item"><a class="nav-link active"
+					<li class="nav-item"><a class="nav-link"
 						data-toggle="tab" role="tab" aria-selected="true"
-						href="#createUserTab">Create new account</a></li>
+						href="#createUserTab" th:classappend="${createUserActive}? active">Create new account</a></li>
 					<li class="nav-item"><a class="nav-link" data-toggle="tab"
-						role="tab" aria-selected="false" href="#loginTab">Log in</a></li>
+						role="tab" aria-selected="false" href="#loginTab" th:classappend="${loginActive}? active">Log in</a></li>
 					<li class="nav-item"><a class="nav-link" data-toggle="tab"
-						role="tab" aria-selected="false" href="#forgetPasswordTab">Forget
+						role="tab" aria-selected="false" href="#forgetPasswordTab" th:classappend="${forgetPasswordActive}? active">Forget
 							password</a></li>
 				</ul>
 
 				<!-- create new user -->
 				<div class="tab-content">
-					<div class="tab-pane active" id="createUserTab">
+					<div class="tab-pane" id="createUserTab" th:classappend="${createUserActive}? active: fade">
 						<div class="card-group">
 							<div class="card-body"
 								style="background-color: #ededed; margin-top: 20px;">
@@ -65,7 +65,7 @@
 
 
 					<!-- login tab -->
-					<div class="tab-pane fade" id="loginTab">
+					<div class="tab-pane" id="loginTab" th:classappend="${loginActive}? active: fade">
 						<div class="card-group">
 							<div class="card-body"
 								style="background-color: #ededed; margin-top: 20px;">
@@ -88,7 +88,7 @@
 					</div>
 
 					<!-- forget password tab -->
-					<div class="tab-pane fade" id="forgetPasswordTab">
+					<div class="tab-pane" id="forgetPasswordTab" th:classappend="${forgetPasswordActive}? active: fade">
 						<div class="card-group">
 							<div class="card-body"
 								style="background-color: #ededed; margin-top: 20px;">
