Add sign up new user logic
1. Sign up url works properly
2. Fill in username/password, a new user can be created in database

--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -44,16 +44,16 @@
 						<div class="card-group">
 							<div class="card-body"
 								style="background-color: #ededed; margin-top: 20px;">
-								<form>
+								<form method="post">
 									<div class="form-group">
 										<label for="newUsername">* Username: </label> <input
 											required="required" type="text" class="form-control"
-											id="newUsername" name="username">
+											id="username" name="username">
 									</div>
 									<div class="form-group">
 										<label for="emailAddress">* Email Address: </label> <input
 											required="required" type="text" class="form-control"
-											id="emailAddress" name="email">
+											id="email" name="email">
 									</div>
 
 									<button type="submit" class="btn btn-primary">Create a
