--- a/src/main/resources/templates/common/headerAndFooter.html
+++ b/src/main/resources/templates/common/headerAndFooter.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-US" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en-US" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="common-header">
 <meta charset="utf-8">
 <meta name="viewport"
@@ -42,9 +44,10 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="nav-item"><a class="nav-link" href="#">Shopping
 							Cart</a></li>
-					<li class="nav-item"><a class="nav-link" href="login">My
+					<li class="nav-item"><a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}">Log in</a></li>
+					<li class="nav-item"><a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/myProfile}">My
 							Account</a></li>
-					<li class="nav-item"><a class="nav-link" href="/#">Log out</a></li>
+					<li class="nav-item"><a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}">Log out</a></li>
 				</ul>
 			</div>
 		</nav>
