--- a/src/main/resources/templates/myProfile.html
+++ b/src/main/resources/templates/myProfile.html
@@ -71,9 +71,15 @@
 									</div>
 
 									<div class="form-group">
-										<label for="username">User name</label> <input type="text"
+										<label for="username">User Name</label> <input type="text"
 											class="form-control" id="username" name="username"
 											th:value="${user.username}">
+									</div>
+									
+									<div class="form-group">
+										<label for="phoneNumer">Phone Number</label> <input type="text"
+											class="form-control" id="phoneNumer" name="phoneNumer"
+											th:value="${user.phoneNumber}">
 									</div>
 
 									<div class="form-group">
