add admin login page

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -4,6 +4,8 @@
 <body>
 	<div th:replace="common/adminHeader :: navbar"></div>
 
+    <hr class="featurette-divider">
+    
 	<div th:replace="common/headerAndFooter :: footer"></div>
 
 	<div th:replace="common/headerAndFooter :: body-scripts"></div>
