--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -23,7 +23,7 @@
 		<img class="img-responsive" src="img/wood.png" alt="wood"
 			style="margin-top: -70px;" height="200px" width="1200px">
 
-		<div class="row" style="margin-top: 60px;">
+		<div class="row" style="margin-top: 60px; margin-bottom: 100px;">
 
 			<!-- Tabs -->
 			<div class="col-lg-9 offset-lg-3">
