--- a/src/main/resources/templates/common/headerAndFooter.html
+++ b/src/main/resources/templates/common/headerAndFooter.html
@@ -36,7 +36,8 @@
 								class="dropdown-item" href="#">Another action</a> <a
 								class="dropdown-item" href="#">Something else here</a>
 						</div></li>
-					<li class="nav-item"><a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/admin}">Admin</a></li>	
+					<li class="nav-item"><a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/admin/login}">Admin</a></li>	
+					<li class="nav-item"><a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/admin}">Admin</a></li>	
 				</ul>
 				<form class="form-inline my-2 my-md-0">
 					<input class="form-control" type="text" placeholder="Search"
