--- a/src/main/resources/templates/common/adminHeader.html
+++ b/src/main/resources/templates/common/adminHeader.html
@@ -15,18 +15,17 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarsExample07XL">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a class="nav-link" sec:authorize="isAnonymous()"
-					th:href="@{/}">Home
-							<span class="sr-only">(current)</span>
+					<li class="nav-item active"><a class="nav-link"
+						sec:authorize="isAnonymous()" th:href="@{/}">Home <span
+							class="sr-only">(current)</span>
 					</a></li>
-					<li class="nav-item dropdown"><div th:if="${actionActive}"><a
-						class="nav-link dropdown-toggle"
-						href="#" id="dropdown07XL" data-toggle="dropdown"
-						aria-expanded="false">Action</a>
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" sec:authorize="isAuthenticated()"
+						id="dropdown07XL" data-toggle="dropdown" aria-expanded="false">Menu</a>
 						<div class="dropdown-menu" aria-labelledby="dropdown07XL">
-							<a class="dropdown-item" href="#">Add a new dish</a> <a
-								class="dropdown-item" href="#">View menu</a>
-						</div></div></li>
+							<a class="dropdown-item" th:href="@{/admin/dish/add}">Add a
+								new dish</a> <a class="dropdown-item" href="#">View menu</a>
+						</div></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="nav-item"><a class="nav-link"
