--- a/src/main/resources/templates/common/adminHeader.html
+++ b/src/main/resources/templates/common/adminHeader.html
@@ -24,7 +24,7 @@
 						id="dropdown07XL" data-toggle="dropdown" aria-expanded="false">Menu</a>
 						<div class="dropdown-menu" aria-labelledby="dropdown07XL">
 							<a class="dropdown-item" th:href="@{/admin/dish/add}">Add a
-								new dish</a> <a class="dropdown-item" href="#">View menu</a>
+								new dish</a> <a class="dropdown-item" th:href="@{/admin/dish/menu}">View menu</a>
 						</div></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
