--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -4,7 +4,34 @@
 <body>
 	<div th:replace="common/adminHeader :: navbar"></div>
 	
-	<h1>Menu</h1>
+	<div class="container" style="margin-top: 100px; margin-bottom: 100px;">
+	     <div class="table-responsive">
+	        <table id="menuTable" class="table table-hover table-striped">
+	            <thead>
+	                <tr>
+	                    <th>Name</th>
+	                    <th>Description</th>
+	                    <th>Category</th>
+	                    <th>List Price</th>
+	                    <th>Discount Price</th>
+	                    <th>Available</th>
+	                    <th>Operation</th>
+	                </tr>
+	            </thead>
+	            <tbody>
+	                <tr th:each="dish: ${menu}">
+	                    <td th:text="${dish.name}"></td>
+	                    <td th:text="${dish.description}"></td>
+	                    <td th:text="${dish.category}"></td>
+	                    <td th:text="${dish.listPrice}"></td>
+	                    <td th:text="${dish.discountPrice}"></td>
+	                    <td th:text="${dish.active}"></td>
+	                    <td>Delete</td>
+	                </tr>
+	            </tbody>
+	        </table>
+	     </div>
+	</div>
 	
 	<hr class="featurette-divider">
 
