--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -2,35 +2,70 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="common/headerAndFooter :: common-header" />
 <body>
-	<div th:replace="common/adminHeader :: navbar"></div>
-	
-	<div class="container" style="margin-top: 100px; margin-bottom: 100px;">
-	     <div class="table-responsive">
-	        <table id="menuTable" class="table table-hover table-striped">
-	            <thead>
-	                <tr>
-	                    <th>Name</th>
-	                    <th>Description</th>
-	                    <th>Category</th>
-	                    <th>List Price</th>
-	                    <th>Discount Price</th>
-	                    <th>Available</th>
-	                    <th>Operation</th>
-	                </tr>
-	            </thead>
-	            <tbody>
-	                <tr th:each="dish: ${menu}">
-	                    <td th:text="${dish.name}"></td>
-	                    <td th:text="${dish.description}"></td>
-	                    <td th:text="${dish.category}"></td>
-	                    <td th:text="${dish.listPrice}"></td>
-	                    <td th:text="${dish.discountPrice}"></td>
-	                    <td th:text="${dish.active}"></td>
-	                    <td>Delete</td>
-	                </tr>
-	            </tbody>
-	        </table>
-	     </div>
+	<div th:replace="common/headerAndFooter :: navbar"></div>
+
+	<div class="container">
+		<div class="row" style="margin-bottom: -100px;">
+			<div class="col-lg-9">
+				<h2 class="second-headline">
+					<span
+						th:text="${user}? ${#string.toUpperCase(user.username)} : 'The Full Menu' ">User
+						Account</span>
+				</h2>
+			</div>
+			<div class="col-lg-3">
+				<img class="img-responsive rounded-circle" width="400px"
+					height="400px" src="img/logo.png" alt="logo image">
+			</div>
+		</div>
+
+		<hr
+			style="position: absolute; width: 1200px; height: 6px; background-color: #333; z-index: -1; margin-top: -120px">
+
+		<img class="img-responsive" src="img/wood.png" alt="wood"
+			style="margin-top: -70px;" height="200px" width="1200px">
+
+		<div class="row" style="margin-top: 60px; margin-bottom: 100px;">
+
+			<!-- Tabs -->
+			<div class="col-lg-9 offset-lg-3">
+				<div th:if="${emptyList}">
+					<h5 style="font-style: itatlic;">No results found.</h5>
+				</div>
+
+				<table border="0" id="menu">
+					<thead>
+						<tr></tr>
+					</thead>
+					<tbody>
+						<tr class="dish-item" th:each="dish : ${menu}">
+							<td>
+								<div th:if="${dish != null}">
+									<div class="row">
+										<div class="col-xs-3">
+											<a th:href="@{/dishDetails?id=} + ${dish.id}"><img class="image-responsive menu"
+												th:src="@{/img/dish/} + ${dish.id} + '.png'"></a>
+										</div>
+										<div class="col-xs-9">
+											<a th:href="@{/dishDetails?id=} + ${dish.id}"><h4 th:text="${dish.name}"></h4></a>
+											<span th:text="${dish.category}"></span> <span
+												th:text="${dish.description}"></span> <span
+												style="font-size: x-large; color: #db3208;">$<span
+												th:text="${#numbers.formatDecimal(dish.discountPrice, 0 , 'COMMA', 2, 'POINT')}"></span></span>
+
+											<span style="text-decoration: line-through;">$<span
+												th:text="${#numbers.formatDecimal(dish.listPrice, 0 , 'COMMA', 2, 'POINT')}"></span></span>
+
+											<span th:text="${dish.active}"></span>
+										</div>
+									</div>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 	</div>
 	
 	<hr class="featurette-divider">
